chore(build): add jdk.incubator.vector module to application JVM args